# Digital-image-and-video-processing

./: Exam2019.ipynb  README.md  Readme.md  review.md
11周上课/Python/: Task9.ipynb
11周上课/c++/: hxy.cpp
12周上课/Python/: Task10.ipynb
12周上课/c++/: hxy.cpp
13周上课/Python/: Task11.ipynb
15周上课/: gass.md
15周上课/Python/: Task12.ipynb
2周课后/Python/: Task1.ipynb
2周课后/c++/: CMakeLists.txt  hxy.cpp
3周课后/Python/: Task2.ipynb
3周课后/c++/: hxy.cpp
3周课后/team_work/: sift.py
3周课后/team_work/c++/: CMakeLists.txt  team1.cpp
3周课后/team_work/ppt_sift_surf/: beamerthemeCoventry.sty  zh.tex
4周课后/Python/: Task3.ipynb
4周课后/c++/: hxy.cpp
5周上课/Python/: Task4.ipynb
5周上课/c++/: CMakeLists.txt  hxy.cpp
6周上课/Python/: Task5.ipynb
6周上课/c++/: hxy.cpp
7周上课/Python/: Task6.ipynb
7周上课/c++/: CMakeLists.txt  hxy.cpp
8周课后/Python/: Task7.ipynb
8周课后/c++/: hxy.cpp  test.cpp
9周上课/Python/: Task8.ipynb
9周上课/c++/: CMakeLists.txt  demo.cpp  hxy.cpp  wrap_hough.cpp
my_definition/: PM_gabor.py  basic.py  noise_denoise.py
小波/Python/: Wavelet.ipynb
小波/c++/: CMakeLists.txt  ck.cpp  hxy.cpp
考试样卷/: Exam.ipynb
